Fix issue where modal is covered by video elem

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -166,7 +166,7 @@
 .custom-modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 10000;
     left: 0;
     top: 0;
     width: 100%;
